[project]
requires-python = ">=3.10"

[tool.ruff]
extend-exclude = ["tests", "env"]

[tool.ruff.lint]
extend-select = [
    # pydocstyle
    "D101",
    "D200",
    "D201",
    "D202",
    "D204",
    "D300",
    "D301",
    "D403",
    "D417",
    "D418",
    "D419",
    # flake8-simplify
    "SIM"
]
ignore = ["SIM105", "SIM117"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
